fixing minor issues with too wide header, news row-head

--- a/indians/static/scss/components/events.scss
+++ b/indians/static/scss/components/events.scss
@@ -6,7 +6,7 @@ section.events {
 
     .row-head {
       grid-column-start: 2;
-      grid-column-end: 13;
+      grid-column-end: 12;
       display: flex;
       align-items: center;
       justify-content: space-between;
