--- a/indians/static/scss/main.scss
+++ b/indians/static/scss/main.scss
@@ -83,7 +83,7 @@ html {
     }
 
     section {
-      max-width: 100vw;
+      max-width: 100%;
       background-repeat: repeat;
       > div {
         display: grid;
@@ -132,10 +132,10 @@ html {
       transform: translateX(2px);
 
       &.flip-y {
-        transform: scaleY(-1) translateX(-4px);
+        transform: scaleY(-1);
       }
       &.flip-x {
-        transform: scale(-1, -1) translateX(4px);
+        transform: scale(-1, -1);
       }
       &.justify-bottom {
         bottom:1px;
